# chunked-bytes

./: Cargo.toml  LICENSE  README.md
benches/: bench.rs
examples/: encoder.rs
src/: chunked.rs  chunked_bytes.rs  iter.rs  lib.rs  loosely.rs  read.rs  strictly.rs  tests.rs  write.rs
src/decode/: decoder.rs  error.rs  mod.rs  utf16dec.rs  utf8dec.rs
src/encode/: encoder.rs  error.rs  mod.rs  utf16enc.rs  utf8enc.rs
