[package]
name = "chunked-bytes"
version = "0.1.0-beta.3"
license = "MIT"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
edition = "2018"

repository = "https://github.com/mzabaluev/chunked-bytes"
description = """
A rope-like non-contiguous buffer for efficient data structure serialization
and vectored output.
"""
keywords = ["buffers", "rope", "zero-copy", "io"]
categories = ["network-programming", "data-structures"]

[dependencies]
bytes = "0.5"

[dev-dependencies]
futures = "0.3"
pin-project = "0.4"

[dev-dependencies.tokio]
version = "0.2"
features = ["io-util", "rt-threaded", "tcp", "macros"]
