[package]
name = "chunked-bytes"
version = "0.3.0-dev"
license = "MIT"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
edition = "2018"

repository = "https://github.com/mzabaluev/chunked-bytes"
description = """
A rope-like non-contiguous buffer for efficient data structure serialization
and vectored output.
"""
readme = "README.md"
keywords = ["buffers", "rope", "zero-copy", "io"]
categories = ["network-programming", "data-structures"]

[dependencies]
bytes = "1.0"

[dev-dependencies]
futures = { version = "0.3", features = ["std"], default-features = false }
generic-tests = "0.1.1"
pin-project = "1.0"

[dev-dependencies.tokio]
version = "1.1"
features = ["rt-multi-thread", "macros"]
